feat: Rewrite of some things